...

      <View className="flex-row px-4 py-4">
        <TextInput
          multiline
          autoFocus={editing}
          className="flex-1 bg-white"
          placeholder="Entre na discussão"
          value={content}
          onChangeText={(text) => form.setValue('content', text)}
        />
        <Pressable
          accessibilityLabel="Enviar"
          className="ml-3"
          disabled={!content}
          onPress={onSaveComment}
        >
          {isPending ? (
            <ActivityIndicator color="black" size={24} />
...
