...

      <View className="flex-row gap-3">
        <TextInput
          autoFocus={editing}
          className="flex-1 bg-white"
          multiline
          placeholder="Entre na discussão"
          value={content}
          onChangeText={text => form.setValue('content', text)}
        />
        <Pressable
          disabled={!content}
          onPress={() => {
...
