...
      },
    },
    Profile: {
      screen: ProfileScreen,
      options: {
        headerRight: () => <ProfileLogoutButton />,
        tabBarAccessibilityLabel: 'Perfil',
        tabBarIcon(props) {
          return (
            <Icon
              name={props.focused ? 'account' : 'account-outline'}
              size={24}
            />
...
