appId: com.discussions
---
- launchApp:
    clearState: true

- tapOn: "E-mail"
- inputText: "john@mail.com"

- tapOn: "Senha"
- inputText: "password"

- tapOn:
    id: "submit_button"
- assertVisible: "Logado com sucesso!"