appId: com.discussions
---
- launchApp:
    clearState: true

- tapOn: "Cadastre-se agora"
- assertVisible: "Criar conta"

- tapOn: "Nome"
- inputRandomPersonName

- tapOn: "E-mail"
- inputRandomEmail

- tapOn: "Senha"
- inputText: "password"

- tapOn: "Confirmar senha"
- inputText: "password"
- hideKeyboard

- tapOn: 
    id: "submit_button"
- assertVisible: "Cadastro realizado com sucesso!"